--- a/JhonMicroservices-FirstMicrosservices/GeekShopping/GeekShopping.IdentityServer/Views/Account/Login.cshtml
+++ b/JhonMicroservices-FirstMicrosservices/GeekShopping/GeekShopping.IdentityServer/Views/Account/Login.cshtml
@@ -45,6 +45,9 @@
                             <button class="btn btn-secondary" name="button" value="cancel">Cancel</button>
                         </form>
                     </div>
+                    <div class="card-footer">
+                        <a href="@Url.Action("Register", new { Model.ReturnUrl })">New user? Create account</a>
+                    </div>
                 </div>
             </div>
         }
